--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -5,3 +5,5 @@
 @import "partials/header.scss";
 @import "partials/footer.scss";
 @import "partials/home.scss";
+@import "partials/aboutus.scss";
+@import "partials/contacts.scss";
