registration form & single product page

--- a/src/html/template/footer.html
+++ b/src/html/template/footer.html
@@ -43,6 +43,10 @@
 				</span></li>
 			</ul>
 
+			<h4 id="footer-madeby">made by 
+				<span id="footer-madeby-bold">Brain & Spirit</span>
+			</h4>
+
 		</div>
 	</footer>
 	
