--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -7,3 +7,5 @@
 @import "partials/home.scss";
 @import "partials/aboutus.scss";
 @import "partials/contacts.scss";
+@import "partials/single.scss";
+@import "partials/registration.scss";
