--- a/src/html/template/registration.html
+++ b/src/html/template/registration.html
@@ -11,17 +11,17 @@
 			<div class="regist-form-group">
 				<label>Дата рождения</label>
 				<div class="regist-input-wrapper">
-					<input class="regist-input-small" type="number" required>
+					<input class="regist-input-small" type="number" min="1" max="31" required>
 					<span class="input-separator">/</span>
 					<span class="regist-input-text">Число</span>
 				</div>
 				<div class="regist-input-wrapper">
-					<input class="regist-input-small" type="number" required>
+					<input class="regist-input-small" type="number" min="1" max="12" required>
 					<span class="input-separator">/</span>
 					<span class="regist-input-text">Месяц</span>
 				</div>
 				<div class="regist-input-wrapper">
-					<input class="regist-input-small" type="number" required>
+					<input class="regist-input-small" type="number" min="1900" required>
 					<span class="input-separator-hide">/</span>
 					<span class="regist-input-text">Год</span>
 				</div>
