--- a/src/html/template/header.html
+++ b/src/html/template/header.html
@@ -20,11 +20,11 @@
 					<li class="header-menu-item"><a href="#">Про нас</a></li>
 					<li class="header-menu-item"><a href="#">Товары</a></li>
 					<li class="header-menu-item"><a href="#">Контакты</a></li>
+				</ul>
 
-					<ul id="header-contacts">
-						<li class="header-contacts-item">+38 (050) <span class="header-contacts-item-bold">372 44 22</span></li>
-						<li class="header-contacts-item">+38 (050) <span class="header-contacts-item-bold">372 44 22</span></li>
-					</ul>
+				<ul id="header-contacts">
+					<li class="header-contacts-item">+38 (050) <span class="header-contacts-item-bold">372 44 22</span></li>
+					<li class="header-contacts-item">+38 (050) <span class="header-contacts-item-bold">372 44 22</span></li>
 				</ul>
 
 				<ul id="header-langs">
@@ -38,12 +38,22 @@
 				</ul>
 
 				<div id="header-user">
-					<div id="header-user-login">Войти</div>
-					<div id="header-user-register">Регистрация</div>
+					<ul>
+						<li>
+							<div id="header-user-login">Войти</div>
+							<div id="header-user-register">Регистрация</div>
+						</li>
+						<li>
+							<div id="header-user-basket">
+								<img src="../img/header/basket.png" alt="basket">
+								<span id="header-user-basket-counter">1</span>
+								Корзина</div>
+							</li>
+						</ul>
+					</div>
+
 				</div>
-
 			</div>
-		</div>
-	</header>
+		</header>
 
-	//= registration.html
+		//= registration.html
