--- a/src/style/partials/userforms.scss
+++ b/src/style/partials/userforms.scss
@@ -1,4 +1,4 @@
-#regist {
+.user {
 	position: fixed;
 	padding: 43px 43px;
 	width: 454px;
@@ -49,13 +49,13 @@
 			}
 		}
 
-		.regist-form-group {
+		&-group {
 			color: #d2d2d2;
 			font-family: HelveticaNeueCyr-Roman;
 			letter-spacing: 2px;
 			font-size: 20px;
 
-			.regist-input-wrapper {
+			.user-input-wrapper {
 				display: inline-block;
 			}
 
@@ -63,7 +63,7 @@
 				visibility: hidden;
 			}
 
-			.regist-input-text {
+			.user-input-text {
 				font-size: 10px;
 				text-transform: uppercase;
 				padding-top: 5px;
@@ -72,14 +72,14 @@
 				text-align: center;
 			}
 
-			.regist-input-small {
+			.user-input-small {
 				position: relative;
 				padding-left: 10px;
 				padding-right: 0;
 				width: 60px;
 			}
 
-			.regist-input-medium {
+			.user-input-medium {
 				position: relative;
 				padding-left: 10px;
 				padding-right: 0;
@@ -105,7 +105,7 @@
 	}
 }
 
-#regist-overlay {
+.user-overlay {
 	width: 100%;
 	height: 100%;
 	position: fixed;
@@ -114,4 +114,10 @@
 	cursor: pointer;
 	display: none;
 	z-index: 11;
+}
+
+#login {
+	top: 140px;
+	overflow-y: hidden;
+	height: 360px;
 }
