basket, profile page & new logo

--- a/src/html/template/login.html
+++ b/src/html/template/login.html
@@ -1,4 +1,8 @@
 <section id="login" class="user">
+
+		<div class="user-exit">
+			<div class="user-exit-btn"></div>
+		</div>
 	
 		<h2 class="user-header">Вход</h2>
 
@@ -8,7 +12,7 @@
 			<label>Пароль</label>
 			<input type="password" required>
 
-			<button type="submit" form="login-form">Войти</button>
+			<button class="user-btn" type="submit" form="login-form">Войти</button>
 		</form>
 
 </section>
