--- a/src/html/template/registration.html
+++ b/src/html/template/registration.html
@@ -1,4 +1,8 @@
 <section id="regist" class="user">
+
+		<div class="user-exit">
+			<div class="user-exit-btn"></div>
+		</div>
 	
 		<h2 class="user-header">Регистрация</h2>
 
@@ -59,7 +63,7 @@
 				</div>
 			</div>
 
-			<button type="submit" form="regist-form">Зарегистрироваться</button>
+			<button class="user-btn" type="submit" form="regist-form">Зарегистрироваться</button>
 		</form>
 
 </section>
