--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -9,3 +9,5 @@
 @import "partials/contacts.scss";
 @import "partials/single.scss";
 @import "partials/userforms.scss";
+@import "partials/header-short.scss";
+@import "partials/profile.scss";
