--- a/src/html/template/header-short.html
+++ b/src/html/template/header-short.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-	<header id="header">
+	<header id="header" class="header-short">
 		<div id="header-wrapper">
 			<div class="content">
 
@@ -17,14 +17,9 @@
 				</div>
 
 				<ul id="header-menu">
-					<li class="header-menu-item"><a href="#">Про нас</a></li>
-					<li class="header-menu-item"><a href="#">Товары</a></li>
-					<li class="header-menu-item"><a href="#">Контакты</a></li>
-				</ul>
-
-				<ul id="header-contacts">
-					<li class="header-contacts-item">+38 (050) <span class="header-contacts-item-bold">372 44 22</span></li>
-					<li class="header-contacts-item">+38 (050) <span class="header-contacts-item-bold">372 44 22</span></li>
+					<li class="header-menu-item"><a href="#">Профиль</a></li>
+					<li class="header-menu-item"><a href="#">Актуальные заказы</a></li>
+					<li class="header-menu-item"><a href="#">Архив</a></li>
 				</ul>
 
 				<ul id="header-langs">
