--- a/src/style/partials/header.scss
+++ b/src/style/partials/header.scss
@@ -6,6 +6,7 @@
 
 	.content {
 		position: relative;
+		height: 100%;
 	}
 
 	&-menu, &-contacts, &-langs, &-user,
@@ -28,6 +29,10 @@
 		background-color: white;
 		padding: 19px 22px;
 		box-shadow: 0px 7px 15px 0px rgba(0, 0, 0, 0.14);
+
+		img {
+			width: 130px;
+		}
 	}
 
 	&-menu {
