Archive page, fixes
fix for long item names - home page
fix for prices - basket

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -11,3 +11,4 @@
 @import "partials/userforms.scss";
 @import "partials/header-short.scss";
 @import "partials/profile.scss";
+@import "partials/archive.scss";
