--- a/src/style/partials/userforms.scss
+++ b/src/style/partials/userforms.scss
@@ -213,6 +213,7 @@
 				letter-spacing: 2px;
 				font-size: 25px;
 				margin-left: 26px;
+				width: 96px;
 
 				&-lowercase {
 					font-family: HelveticaNeueCyr-Bold;
