--- a/src/style/partials/home.scss
+++ b/src/style/partials/home.scss
@@ -183,6 +183,7 @@
 			.shop-goods-item {
 				display: inline-block;
 				margin-top: 35px;
+				width: 250px;
 
 				// every middle item
 				&:nth-child(3n+2) {
@@ -195,13 +196,23 @@
 					height: 268px;
 				}
 
+				&-nameWrapper {
+					display: flex;
+					height: 36px;
+					margin-top: 20px;
+					margin-bottom: 16px;
+				}
+
 				&-name {
 					font-family: HelveticaNeueCyr-Bold;
 					letter-spacing: 2px;
 					font-size: 16px;
 					text-transform: uppercase;
-					padding-top: 28px;
-					padding-bottom: 24px;
+					vertical-align: middle;
+					margin: auto;
+					max-height: 36px;
+					text-overflow: ellipsis;
+					overflow: hidden;
 				}
 
 				&-price {
