short header fix

--- a/src/style/partials/header-short.scss
+++ b/src/style/partials/header-short.scss
@@ -11,7 +11,7 @@
 	}
 
 	#header-menu {
-		margin-left: 226px;
+		margin-right: 230px;
 		height: 80px;
 
 		.header-menu-item {
@@ -20,7 +20,7 @@
 		}
 	}
 
-	#header-langs {
-		margin-left: 280px;
+	#header-user {
+
 	}
 }
