--- a/src/style/partials/home.scss
+++ b/src/style/partials/home.scss
@@ -91,7 +91,7 @@
 
 			&-wrapper {
 				margin-top: 15px;
-				padding-left: 54px;
+				padding-left: 42px;
 			}
 
 			&-price {
@@ -106,6 +106,9 @@
 			}
 
 			&-label {
+				width: 32px;
+				text-align: left;
+				display: inline-block;
 				font-family: HelveticaNeueCyr-Bold;
 				letter-spacing: 0.5px;
 				color: $color_darkgray;
@@ -118,7 +121,7 @@
 				border-color: #c8c8c8;
 				background-color: #c8c8c8;
 				border-radius: 0px;
-				margin-left: 75px;
+				margin-left: 69px;
 				margin-top: 35px;
 
 				.ui-widget-header {
@@ -160,8 +163,8 @@
 
 	&-goods {
 		border-left: 1px solid #c8c8c8;
-		padding-left: 49px;
-		width: 765px;
+		padding-left: 44px;
+		width: 768px;
 		float: left;
 
 		&-header {
