--- a/src/html/template/basket.html
+++ b/src/html/template/basket.html
@@ -48,7 +48,7 @@
 		<div class="user-total-price">5000<span class="user-total-price-lowercase">грн</span></div>
 	</div>
 
-	<div class="user-btn-right user-btn">Оформить заказ</div>
+	<div id="user-basket-btn" class="user-btn-right user-btn">Оформить заказ</div>
 
 </section>
 
