profile/home pages update
- pagination for home page
- scroll btn to goods for home page
- profile/archive header changes

--- a/src/html/template/header-short.html
+++ b/src/html/template/header-short.html
@@ -17,8 +17,9 @@
 				</div>
 
 				<ul id="header-menu">
-					<li class="header-menu-item"><a href="#">Личная информация</a></li>
-					<li class="header-menu-item"><a href="#">Архив</a></li>
+					<li class="header-menu-item"><a href="#">Про нас</a></li>
+					<li class="header-menu-item"><a href="#">Товары</a></li>
+					<li class="header-menu-item"><a href="#">Контакты</a></li>
 				</ul>
 
 				<ul id="header-langs">
@@ -37,18 +38,21 @@
 							<div id="header-user-login">Войти</div>
 							<div id="header-user-register">Регистрация</div>
 						</li>
-						<li>
-							<div id="header-user-basket">
-								<img src="../img/header/basket.png" alt="basket">
-								<span id="header-user-basket-counter">1</span>
-								Корзина</div>
-							</li>
 						</ul>
 					</div>
 
 				</div>
 			</div>
 		</header>
+
+		<section class="profile-menu">
+			<div class="content">
+				<ul>
+					<li class="profile-menu-item"><a href="#">Личная информация</a></li>
+					<li class="profile-menu-item-active"><a href="#">Архив</a></li>
+				</ul>
+			</div>
+		</section>
 
 		//= registration.html
 
