--- a/src/style/partials/userforms.scss
+++ b/src/style/partials/userforms.scss
@@ -333,7 +333,7 @@
 }
 
 #buy {
-	display: block;
+	display: none;
 
 	.user {
 
@@ -353,5 +353,5 @@
 }
 
 #buy-overlay {
-	display: block;
+	display: none;
 }
